--- a/aula.html
+++ b/aula.html
@@ -3,11 +3,16 @@
 
  <head>
 
+    <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+
     <style>
 
     body{
 
-        background-image: url('Pluto.jpg');
+        background-image: url('design.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
     }
 
     </style>
@@ -45,7 +50,7 @@
     </style>
 
 
-               <h1 class="TituloPrincipal"> <strong> Timothy John Berners-Lee </strong> <h1> 
+               <h1 class="TituloPrincipal" style="background-color: Dodger;"> <strong> Timothy John Berners-Lee </strong> <h1> 
 <hr>
 
 </center>
@@ -78,12 +83,15 @@
 
 <center>
 
-<div>
+    <a href="https://www.gettyimages.com.br/fotos/the-stata-center-for-computer" target="_blank">Imagens de Timothy</a>
 
-    <img src="Tim.jpeg" alt="Tim.jpeg" height="300" width="500">
+</center>
+
+<center>
+
+<img src="Tim.jpg" width="300" height="300">
 
 
-</div>
 
 </center>
 
