--- a/aula.html
+++ b/aula.html
@@ -50,46 +50,13 @@
     </style>
 
 
-               <h1 class="TituloPrincipal" style="background-color: Dodger;"> <strong> Timothy John Berners-Lee </strong> <h1> 
+               <h1 class="TituloPrincipal" style="background-color: Dodger;"> <strong> Aula 06 HTML </strong> <h1> 
 <hr>
 
 </center>
 
-    <p> Timothy John Berners-Lee KBE, OM, FRS (TimBL ou TBL)(Londres, 8 de junho de 1995) é um físico britânico, cientista da computação e professor do MIT. É o criador da World Wide web, tendo feita a primeira proposta para sua criação a 11 de março de 1989. Em 25 de dezembro de 1990, com a ajuda de Robert  Cailliau e um jovem estudante do CERN, implementou a primeira comunicação bem-sucedida entre um cliente HTTP e o servidor através da internet</p>
 
-<h3 class="Nascimento">Nascimento</h3>
-
-<p>8 de Junho de 1955</p>
-
-<h3 class="Residencia">Residência</h3>
-
-<p>Boston</p>
-
-<h3 class="Nacionalidade">Nacionalidade</h3>
-
-<p>Britânico</p>
-
-<ul>
-
-  <li>Prêmio De Tecnologia do Milênio</li>
-  <li>Prêmio Japão</li>
-  <li>Prêmio Turing</li>
-  <li>The President's Medal</li>
-  <li>Prêmio de Engenharia Rainha Elizabeth</li>
-
-</ul>
-
-<hr>
-
-<center>
-
-    <a href="https://www.gettyimages.com.br/fotos/the-stata-center-for-computer" target="_blank">Imagens de Timothy</a>
-
-</center>
-
-<center>
-
-<img src="Tim.jpg" width="300" height="300">
+<img src="gokucalvo.jpg" width="300" height="300">
 
 
 
@@ -97,9 +64,9 @@
 
 <script>
 
-      window.alert('Leia sobre Timothy John Berners-Lee')
-      window.confirm('Esta Gostando?')
-      window.prompt('Qual Seu Nome?')
+      window.alert('Preparado para ver o goku calvo?')
+      window.confirm('Tem certeza?')
+      window.prompt('Ok.')
 </script>
 
 
